fix aligning prices panels on event pricing section

--- a/css/style.css
+++ b/css/style.css
@@ -640,7 +640,7 @@ header {
   height: 704px;
   background-color: #f5f5f5;
   background-image: url('../img/parallax3.jpg');
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -667,6 +667,22 @@ header {
 
 .prices-panel ul li:first-child {
   border-top: 1px solid #fff;
+}
+
+.pricing {
+  display: inline-block;
+  font-size: 40px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.pricing > strong {
+  font-weight: 700;
+}
+
+.pricing > small {
+  font-size: 16px;
+  font-weight: 400;
+  color: #777;
 }
 /*--------------------------------------
 --------------*** FOOTER SECTION ***------------
